# tree-sitter-sed

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sed.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sed/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSed/: sed.h
bindings/swift/TreeSitterSedTests/: TreeSitterSedTests.swift
examples/: example.sed
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: valid.txt
