[package]
name = "tree-sitter-sed"
description = "GNU sed grammer for tree-sitter"
version = "0.1.0"
authors = ["Mark Skelton <mdskelton99@gmail.com>"]
license = "ISC"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sed"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mskelton/tree-sitter-sed"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
