[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-sed"
description = "GNU sed grammer for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "sed"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Mark Skelton", email = "mdskelton99@gmail.com" }]
requires-python = ">=3.9"
license.text = "ISC"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/mskelton/tree-sitter-sed"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
